# gci

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  Doxyfile.in  FCI.pro  FCIDUMP  FCIDeterminant.cpp  FCIDeterminant.h  FCIExcitation.cpp  FCIExcitation.h  FCIHamiltonian.cpp  FCIHamiltonian.h  FCINode.cpp  FCINode.h  FCIParameters.cpp  FCIParameters.h  FCIString.cpp  FCIString.h  FCIdump.cpp  FCIdump.h  Profiler.cpp  Profiler.h  ProfilerC.h  README.md  TreeCIDeterminant.cpp  TreeCIDeterminant.h  TreeCIExcitation.cpp  TreeCIExcitation.h  TreeCIHamiltonian.cpp  TreeCIHamiltonian.h  TreeCINode.cpp  TreeCINode.h  TreeCIParameters.cpp  TreeCIParameters.h  TreeCIString.cpp  TreeCIString.h  bitbucket-pipelines.yml  (+54 more)
.github/workflows/: build-and-test.yml  doxygen-gh-pages.yml
cmake/: libconfig.cmake
cmake/Modules/: FindGA.cmake  FindMKL.cmake  FindPPIDD.cmake
dependencies/: CMakeLists.txt  Eigen3_SHA1  FCIdump_SHA1  IterativeSolver_SHA1  LinearAlgebra_SHA1  Profiler_SHA1  check_commit.sh  checkout.sh  checkout_all.sh  ga_SHA1  iterative-solver_SHA1  memory_SHA1  molpro-plugin_SHA1  molpro_plugin_SHA1  pull.sh  symmetry_matrix_SHA1  update_SHA1.sh  utilities_SHA1
docker/: Dockerfile
extra/: Profiler.cpp  Profiler.h  gciMolpro.cpp
git-hooks/: pre-commit
lib/: CMakeLists.txt  SharedCounter.cpp  SharedCounter.h  gci-config.h.in  gci.h  gciArray.cpp  gciArray.h  gciBBO_RHF.cpp  gciBBO_RHF.h  gciConstants.h  gciDavidson.cpp  gciDavidson.h  gciDeterminant.cpp  gciDeterminant.h  gciExcitationSet.cpp  gciExcitationSet.h  gciFile.cpp  gciFile.h  gciHProduct.cpp  gciHProduct.h  gciHProductSet.cpp  gciHProductSet.h  gciIterativeSolverUtil.h  gciMixedOperator.cpp  gciMixedOperator.h  gciMixedOperatorSecondQuant.cpp  gciMixedOperatorSecondQuant.h  gciMixedTensor.cpp  gciMixedTensor.h  gciMixedWavefunction.cpp  gciMixedWavefunction.h  gciMolpro.cpp  gciOperatorBBO.cpp  gciOperatorBBO.h  gciOptions.cpp  gciOrbitalSpace.cpp  gciOrbitalSpace.h  gciOrbitals.h  gciPersistentOperator.cpp  gciPersistentOperator.h  (+28 more)
mothballs/: gciExcitationOperator.cpp  gciNode.cpp  gciOldOperator.h
src/: CMakeLists.txt  gci.cpp  gci.h  gciBBO_RHF.cpp  gciBBO_RHF.h  gciConstants.cpp  gciConstants.h  gciDeterminant.cpp  gciDeterminant.h  gciExcitationOperator.cpp  gciExcitationOperator.h  gciExcitationSet.cpp  gciExcitationSet.h  gciFile.cpp  gciHProduct.cpp  gciHProduct.h  gciHProductSet.cpp  gciHProductSet.h  gciHamiltonian.h  gciMixedOperator.cpp  gciMixedOperator.h  gciMixedWavefunction.cpp  gciMixedWavefunction.h  gciMolpro.cpp  gciMolpro.h  gciOldOperator.cpp  gciOldOperator.h  gciOperator.cpp  gciOperator.h  gciOperatorBBO.cpp  gciOperatorBBO.h  gciOptions.cpp  gciOptions.h  gciOrbitalSpace.cpp  gciOrbitalSpace.h  gciOrbitals.h  gciPrintable.cpp  gciPrintable.h  gciRHF.cpp  gciRHF.h  (+17 more)
src/molpro/: CMakeLists.txt
src/molpro/gci/: CMakeLists.txt  Problem.cpp  Problem.h  SharedCounter.cpp  SharedCounter.h  gci.h  gciArray.cpp  gciArray.h  gciConstants.h  gciDavidson.cpp  gciDavidson.h  gciDeterminant.cpp  gciDeterminant.h  gciExcitationSet.cpp  gciExcitationSet.h  gciFile.cpp  gciFile.h  gciHProduct.cpp  gciHProduct.h  gciHProductSet.cpp  gciHProductSet.h  gciMixedOperator.cpp  gciMixedOperator.h  gciMixedOperatorSecondQuant.cpp  gciMixedOperatorSecondQuant.h  gciMixedWavefunction.cpp  gciMixedWavefunction.h  gciMolpro.cpp  gciMolpro.h  gciOptions.cpp  gciOptions.h  gciOrbitalSpace.cpp  gciOrbitalSpace.h  gciOrbitals.h  gciPersistentOperator.cpp  gciPersistentOperator.h  gciPrintable.h  gciRun.cpp  gciRun.h  gciState.cpp  (+18 more)
src/molpro/gci/array/: Array.h
src/molpro/gci/schedule/: CMakeLists.txt  SharedCounter.cpp  SharedCounter.h  SharedCounterBase.cpp  SharedCounterBase.h  SharedCounterGA.cpp  SharedCounterGA.h  SharedCounterMPI3.cpp  SharedCounterMPI3.h  SharedCounterSerial.cpp  SharedCounterSerial.h
src/molpro/gci/wavefunction/: CMakeLists.txt  WavefunctionHandler.h
src/molpro/symmetry_matrix/: CMakeLists.txt  Operator-complex-double.cpp  Operator-double.cpp  Operator-float.cpp  Operator-implementation.h  Operator.h  SMat-complex-double.cpp  SMat-double.cpp  SMat-float.cpp  SMat-implementation.h  SMat.cpp  SMat.h  SMatMat-complex-double.cpp  SMatMat-double.cpp  SMatMat-float.cpp  SMatMat-implementation.h  SMatMat.h
test/: CMakeLists.txt  c2_minao.fcidump  he2n.fcidump
test/integration_test/: CMakeLists.txt
test/integration_test/data/C2/: fcidump  fcidump_D  fcidump_D_1_1_1  fcidump_D_1_2_1  fcidump_D_1_2_2  fcidump_D_1_3_1  fcidump_D_1_3_2  fcidump_D_1_3_3  fcidump_Hel_1_1_1  fcidump_Hel_1_2_1  fcidump_Hel_1_2_2  fcidump_Hel_1_3_1  fcidump_Hel_1_3_2  fcidump_Hel_1_3_3  fcidump_Hvib  fcidump_K  fcidump_K_1_1_1  fcidump_K_1_2_1  fcidump_K_1_2_2  fcidump_K_1_3_1  fcidump_K_1_3_2  fcidump_K_1_3_3  fcidump_Lambda_1_2_1  fcidump_Lambda_1_3_1  fcidump_Lambda_1_3_2
test/unit_test/: CMakeLists.txt  fcidump_holstein_2site  fcidump_holstein_2site0  main.cpp  parallel_utils.h  testArray.cpp  testDavidson.cpp  testDistrArray.cpp  testHProduct.cpp  testHProductSet.cpp  testMixedOperator.cpp  testMixedWavefunction.cpp  testPersistentOperator.cpp  testVibSpace.cpp
test/unit_test/array/: util.cpp
test/unit_test/data/: fcidump_holstein_2site_d1_0  fcidump_holstein_2site_nmodal3  fcidump_holstein_2site_nmodal3_d1_0  he2.fcidump  he2_1el.fcidump
test/unit_tests/: CMakeLists.txt  testHProduct.cpp  testHProductSet.cpp  testVibSpace.cpp
